[package]
name = "thinset"
version = "0.1.0"
authors = ["Chris Rybicki <crybicki98@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A data structure for sparse sets of unsigned integers that sacrifices space for speed."
repository = "https://github.com/Chriscbr/thinset"
homepage = "https://github.com/Chriscbr/thinset"
documentation = "https://docs.rs/thinset/"
keywords = ["data-structures", "set", "sparse", "sparse-set"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"

[dev-dependencies]
rand = "0.8.5"
